2008-09-14  David Edelsohn  <edelsohn@gnu.org>

	* config.host: Add x-aix to host_xmake_file.
	* config/rs6000/t-aix52: Do not override LDFLAGS.
	* config/rs6000/x-aix: New file.

2008-09-14  Andy Hutchinson  <hutchinsonandy@aim.com>

	PR target/19636
	PR target/24894
	PR target/31644
	PR target/31786
	* config/avr/avr.c (legitimate_address_p): Fix problem where subreg
	is not recognized as a valid register usage. Allow REG_X to be used
	as a base pointer.
	* config/avr/avr.h (LEGITIMIZE_RELOAD_ADDRESS): Remove code that
	forces a reload when using a base register.

2008-09-14  Danny Smith  <dannysmith@users.sourceforge.net>

	* config/i386/cygming-crtend.c (register_frame_ctor): If
	DEFAULT_USE_CXA_ATEXIT, register __gcc_deregister_frame
	directly with atexit.
	(deregister_frame_ctor): Rename to ...
	(deregister_frame_dtor): Use to call __gcc_deregister_frame
	if !DEFAULT_USE_CXA_ATEXIT.

2008-09-13  Jan Hubicka  <jh@suse.cz>

	* cgraph.c: Include value-prof.h
	* Makefile.in (cgraph.o): Add value-prof.h dependency.

2008-09-13  Jan Hubicka  <jh@suse.cz>

	PR middle-end/32581
	* tree-profile.c (add_abnormal_goto_call_edges): New function.
	(tree_gen_interval_profiler, tree_gen_pow2_profiler,
	tree_gen_one_value_profiler, tree_gen_average_profiler,
	tree_gen_ic_func_profiler, tree_gen_ior_profiler): Use it.

2008-09-13  Jan Hubicka  <jh@suse.cz>

	* i386.c (ix86_expand_movmem, ix86_expand_movstr): Avoid processing too
	many bytes on misalligned blocks.

2008-09-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/cfg.texi: Fix some typos.
	* doc/extend.texi: Likewise.
	* doc/install.texi: Likewise.
	* doc/invoke.texi: Likewise.
	* doc/rtl.texi: Likewise.
	* doc/tree-ssa.texi: Likewise.

2008-09-13  Richard Guenther  <rguenther@suse.de>

	PR middle-end/30141
	* tree-nested.c (finalize_nesting_tree_1): Generate valid
	gimple stores for memory rhs.

2008-09-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/37489